                   ==============================
                   Release Notes for Samba 3.0.21
                            Dec 16, 2005
                   ==============================

This is the latest stable release of Samba. This is the version
that production Samba servers should be running for all current
bug-fixes.  Please read the following important changes in this
release.

Common bugs fixed in 3.0.21 include:

  o Missing groups in a user's token when logging in via kerberos
  o Incompatibilities with newer MS Windows hotfixes and 
    embedded OS platforms
  o Portability and crash bugs.
  o Performance issues in winbindd.

New features introduced in Samba 3.0.21 include:

  o Complete NTLMv2 support by consolidating authentication
    mechanism used at the CIFS and RPC layers.
  o The capability to manage Unix services using the Win32 
    Service Control API.
  o The capability to view external Unix log files via the
    Microsoft Event Viewer.
  o New libmsrpc share library for application developers.
  o Rewrite of CIFS oplock implementation.
  o Performance Counter external daemon.
  o Winbindd auto-detection query methods when communicating with
    a domain controller.
  o The ability to enumerate long share names in libsmbclient 
    applications.


######################################################################
Changes
#######

smb.conf changes
----------------

    Parameter Name                      Action
    --------------                      ------
    dfree cache time			New
    dfree command			Per share
    eventlog list			New
    iprint server			New
    map read only			New
    passdb expand explicit		New
    rename user script			New
    reset on zero vc			New
    svcctl list 			Renamed from 'enable svcctl'


Changes since 3.0.21rc2
-----------------------

commits
-------
o   Jeremy Allison <jra@samba.org>
    * Correctly handle the LDAP_UNWILLING_TO_PERFORM error from 